# opentoonz

./: .gitignore  .travis.yml  README.md  appveyor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: CMakeLists.txt  build.yml  workflow_linux.yml  workflow_macos.yml  workflow_windows.yml
ci-scripts/osx/: travis-build.sh  travis-install.sh
doc/: README_ja.md  how_to_build_bsd.md  how_to_build_linux.md  how_to_build_macosx.md  how_to_build_macosx_ja.md  how_to_build_win.md
plugins/geom/: geom.cpp
plugins/multiplugin/: multi.cpp
stuff/config/: current.txt
toonz/cmake/: BundleInfo.plist.in  FindSuperLU.cmake  FindTIFF.cmake
toonz/sources/: CMakeLists.txt
toonz/sources/colorfx/: CMakeLists.txt
toonz/sources/common/: tproperty.cpp
toonz/sources/image/: CMakeLists.txt  tiio.cpp
toonz/sources/include/: avicodecrestrictions.h  tcommon.h  tfilepath.h  tfont.h  tgeometry.h  tgl.h  tiio.h  timage_io.h  tmsgcore.h  toutputproperties.h  tparamcontainer.h  tparamuiconcept.h  tpersist.h  tproperty.h  traster.h  trasterfx.h  tregionprop.h  trenderresourcemanager.h  trop.h  tropcm.h  tsimplecolorstyles.h  tsound.h  tsound_t.h  tstroke.h  tstrokedeformations.h  tstrokeoutline.h  tstrokeprop.h  tsystem.h  ttessellator.h  tvectorimage.h  tversion.h  tzerofinder.h
toonz/sources/mousedragfilter/: CMakeLists.txt
toonz/sources/stdfx/: CMakeLists.txt  adjustlevelsfx.cpp  backlit.cpp  channelmixerfx.cpp  cornerpinfx.cpp  hsvkeyfx.cpp  igs_color_blend.cpp  igs_hls_noise.cpp  igs_hsv_noise.cpp  igs_level_auto.cpp  igs_level_auto_in_camera.cpp  igs_levels.cpp  (+74 more)
(+520 files in other folders)
